; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_drm_common.c_setup_mode_by_idx.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_drm_common.c_setup_mode_by_idx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kms = type { %struct.TYPE_4__*, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32, i32* }
%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [28 x i8] c"Bad mode index (max = %d).\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kms*, i32)* @setup_mode_by_idx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setup_mode_by_idx(%struct.kms* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.kms*, align 8
  %5 = alloca i32, align 4
  store %struct.kms* %0, %struct.kms** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.kms*, %struct.kms** %4, align 8
  %8 = getelementptr inbounds %struct.kms, %struct.kms* %7, i32 0, i32 0
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = icmp uge i32 %6, %11
  br i1 %12, label %13, label %22

13:                                               ; preds = %2
  %14 = load %struct.kms*, %struct.kms** %4, align 8
  %15 = load %struct.kms*, %struct.kms** %4, align 8
  %16 = getelementptr inbounds %struct.kms, %struct.kms* %15, i32 0, i32 0
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = sub i32 %19, 1
  %21 = call i32 @MP_ERR(%struct.kms* %14, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %20)
  store i32 0, i32* %3, align 4
  br label %35

22:                                               ; preds = %2
  %23 = load %struct.kms*, %struct.kms** %4, align 8
  %24 = getelementptr inbounds %struct.kms, %struct.kms* %23, i32 0, i32 0
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 1
  %27 = load i32*, i32** %26, align 8
  %28 = load i32, i32* %5, align 4
  %29 = zext i32 %28 to i64
  %30 = getelementptr inbounds i32, i32* %27, i64 %29
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.kms*, %struct.kms** %4, align 8
  %33 = getelementptr inbounds %struct.kms, %struct.kms* %32, i32 0, i32 1
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  store i32 %31, i32* %34, align 8
  store i32 1, i32* %3, align 4
  br label %35

35:                                               ; preds = %22, %13
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @MP_ERR(%struct.kms*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
